<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/SignUpImgId"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/welcome" />

            <TextView
                android:id="@+id/loginMsgId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/signup_msg"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/signUpEditTextId"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="@string/SugnUp_Name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signupEmailId"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="@string/Email_Name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signuppassId"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/signupBtnId"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/signUpBtn"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/sign_InTextViewId"
                android:layout_width="429dp"
                android:layout_height="207dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sign_to_Login"
                android:textAlignment="center"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>