<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:src="@drawable/car"
                android:layout_width="190dp"
                android:layout_height="168dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:padding="10dp"

                />

            <TextView
                android:id="@+id/loginMsgId"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                android:textSize="20dp"
                android:text="Login to Your Account"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/loginEditTextId"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/login"
                android:inputType="textPersonName" />

            <EditText
                android:layout_gravity="center"
                android:id="@+id/passEditTextId"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/pass"
                android:inputType="textPassword" />

            <Button
                style="@style/TextAppearance.AppCompat.Medium"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:text="@string/loginBtn"
                android:id="@+id/loginButtontnId"
                android:layout_gravity="center"
                android:layout_width="117dp"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/sign_UpTextViewId"
                android:layout_width="413dp"
                android:layout_height="233dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login_to_signup_msg"
                android:textAlignment="center"
                android:textSize="18sp" />



        </LinearLayout>


    </ScrollView>

</LinearLayout>